2015-05-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Fix a bug in macro __func__ substitution.

2015-05-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_calloc.c: removed unused struct declarations
	* device/lib/pic16/libc/stdio/vfprintf.c: fixed warnings
	* src/SDCC.y: disabled W_ANONYMOUS_MEMBER
	* src/SDCCsymt.c (compStructSize): disabled W_FLEXARRAY_INSTRUCT
	* src/z80/main.c: fixed gbz80_port peephole pointers, and
	* src/ds390/main.c,
	* src/mcs51/main.c,
	* src/stm8/main.c: added peephole null-pointers, unified layout
	* src/stm8/ralloc.c (stm8_assignRegisters): fixed warning
	* support/regression/tests/bug-2320.c: fixed warning

2015-05-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkar.c:
	* sdas/linksrc/lklib.c:
	* sdas/linksrc/lksdcclib.c:
	* src/SDCCmain.c:
	  Remove useless code for Cygwin.
	* support/sdbinutils/bfd/config.bfd:
	* sim/ucsim/cmd.src/cmdutil.cc:
	  Support Cygwin64.

2015-04-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20001011-1.c:
	  Enabled.
	* support/cpp/libcpp/macro.c:
	* support/cpp/libcpp/include/cpplib.h:
	* support/cpp/libcpp/init.c:
	* src/SDCC.y:
	  Support macro __func__.

2015-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Better peephole interaction for early ret statements in functions.

2015-04-22 Ben Shi <powerstudio1st AT 163 DOT com>

	* Makefile.common.in:
	* configure:
	* configure.in:
	* support/regression/Makefile.in:
	* support/regression/ports/ds390/spec.mk:
	* support/regression/ports/hc08/spec.mk:
	* support/regression/ports/mcs51-common/spec.mk:
	* support/regression/ports/pic14/spec.mk:
	* support/regression/ports/pic16/spec.mk:
	* support/regression/ports/s08/spec.mk:
	* support/regression/ports/stm8/spec.mk:
	* support/regression/ports/ucgbz80/spec.mk:
	* support/regression/ports/ucr2k/spec.mk:
	* support/regression/ports/ucr3ka/spec.mk:
	* support/regression/ports/ucz180/spec.mk: